# ipc-bench

./: jack.note
source/: CMakeLists.txt
source/shm/: client.c  server.c
source/shm-touch-all-mem/: CMakeLists.txt  client.c  server.c
